--- a/templates/components/caption_form_disabled.html
+++ b/templates/components/caption_form_disabled.html
@@ -83,7 +83,7 @@
                     </small>
                 </div>
                 <div class="col-md-4 text-end">
-                    <button class="btn btn-outline-primary btn-sm" onclick="location.reload()">
+                    <button class="btn btn-outline-primary btn-sm" data-action="reload">
                         <i class="bi bi-arrow-clockwise"></i> Check Status
                     </button>
                 </div>
