--- a/templates/user_management/verification_error.html
+++ b/templates/user_management/verification_error.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-body p-4">
                     <div class="text-center mb-4">
-                        <i class="fas fa-times-circle text-danger" style="font-size: 4rem;"></i>
+                        <i class="fas fa-times-circle text-danger" class="status-icon-large"></i>
                     </div>
                     
                     <div class="alert alert-danger" role="alert">
