--- a/templates/components/viewer_dashboard.html
+++ b/templates/components/viewer_dashboard.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="platform-actions">
                     {% if user_platform_count > 1 %}
-                    <button class="btn btn-outline-primary btn-sm" onclick="showPlatformSwitcher()">
+                    <button class="btn btn-outline-primary btn-sm" data-action="show-platform-switcher">
                         Switch Platform
                     </button>
                     {% endif %}
@@ -176,7 +176,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3>Switch Platform</h3>
-                <button class="modal-close" onclick="hidePlatformSwitcher()">&times;</button>
+                <button class="modal-close" data-action="hide-platform-switcher">&times;</button>
             </div>
             <div class="modal-body">
                 <div class="platform-list">
@@ -190,7 +190,7 @@
                             </div>
                         </div>
                         {% if platform.id != current_platform.id %}
-                        <button class="btn btn-sm btn-primary" onclick="switchToPlatform({{ platform.id }})">
+                        <button class="btn btn-sm btn-primary" data-action="switchToPlatform" data-params="{{ platform.id }}">
                             Switch
                         </button>
                         {% else %}
