--- a/templates/errors/csrf_error.html
+++ b/templates/errors/csrf_error.html
@@ -58,11 +58,11 @@
                     
                     <div class="d-flex justify-content-between align-items-center mt-4">
                         <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-primary" onclick="window.location.reload()">
+                            <button type="button" class="btn btn-primary" data-action="reload">
                                 <i class="bi bi-arrow-clockwise me-2"></i>
                                 Refresh Page
                             </button>
-                            <button type="button" class="btn btn-outline-secondary" onclick="window.history.back()">
+                            <button type="button" class="btn btn-outline-secondary" data-action="go-back">
                                 <i class="bi bi-arrow-left me-2"></i>
                                 Go Back
                             </button>
