--- a/templates/errors/maintenance.html
+++ b/templates/errors/maintenance.html
@@ -41,7 +41,7 @@
                             <i class="bi bi-house-fill me-1"></i>
                             Return to Dashboard
                         </a>
-                        <button onclick="window.location.reload()" class="btn btn-outline-secondary">
+                        <button data-action="reload" class="btn btn-outline-secondary">
                             <i class="bi bi-arrow-clockwise me-1"></i>
                             Try Again
                         </button>
