--- a/templates/errors/user_management_error.html
+++ b/templates/errors/user_management_error.html
@@ -62,11 +62,11 @@
                     </div>
                     
                     <div class="mt-4 d-flex gap-2 flex-wrap">
-                        <button onclick="window.location.reload()" class="btn btn-primary">
+                        <button data-action="reload" class="btn btn-primary">
                             <i class="fas fa-redo me-1"></i>
                             Refresh Page
                         </button>
-                        <button onclick="window.history.back()" class="btn btn-secondary">
+                        <button data-action="go-back" class="btn btn-secondary">
                             <i class="fas fa-arrow-left me-1"></i>
                             Go Back
                         </button>
