--- a/templates/platform_management.html
+++ b/templates/platform_management.html
@@ -159,7 +159,7 @@
                                             <div class="btn-group" role="group">
                                                 {% if not platform.is_default %}
                                                 <button class="btn btn-sm btn-primary"
-                                                    onclick="switchPlatform({{ platform.id }}, '{{ platform.name }}')"
+                                                    data-action="switchPlatform" data-params="{{ platform.id }}, '{{ platform.name }}'"
                                                     title="Set as default platform">
                                                     <i class="bi bi-arrow-right-circle"></i> Switch
                                                 </button>
@@ -170,19 +170,19 @@
                                                 </button>
                                                 {% endif %}
                                                 <button class="btn btn-sm btn-outline-info"
-                                                    onclick="editPlatform({{ platform.id }})"
+                                                    data-action="editPlatform" data-params="{{ platform.id }}"
                                                     title="Edit platform settings">
                                                     <i class="bi bi-pencil"></i> Edit
                                                 </button>
                                             </div>
                                             <div class="btn-group" role="group">
                                                 <button class="btn btn-sm btn-outline-secondary"
-                                                    onclick="testConnection({{ platform.id }}, '{{ platform.name }}')"
+                                                    data-action="testConnection" data-params="{{ platform.id }}, '{{ platform.name }}'"
                                                     title="Test platform connection">
                                                     <i class="bi bi-wifi"></i> Test
                                                 </button>
                                                 <button class="btn btn-sm btn-outline-danger"
-                                                    onclick="deletePlatform({{ platform.id }}, '{{ platform.name }}')"
+                                                    data-action="deletePlatform" data-params="{{ platform.id }}, '{{ platform.name }}'"
                                                     title="Delete platform connection">
                                                     <i class="bi bi-trash"></i> Delete
                                                 </button>
@@ -366,7 +366,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-danger" id="confirmDeleteButton" disabled
-                    onclick="confirmPlatformDeletion()">
+                    data-action="confirm-platform-deletion">
                     <span class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
                     <i class="bi bi-trash"></i> Delete Platform
                 </button>
