--- a/templates/post_approved.html
+++ b/templates/post_approved.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-body">
                     <div class="text-center mb-4">
-                        <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem;"></i>
+                        <i class="bi bi-check-circle-fill text-success" class="status-icon-large"></i>
                         <h5 class="mt-3">Your approved captions have been posted!</h5>
                         <p class="text-muted">The images with approved alt text have been successfully posted to your platform.</p>
                     </div>
