--- a/templates/user_management/profile.html
+++ b/templates/user_management/profile.html
@@ -17,7 +17,7 @@
                         <i class="fas fa-user"></i> User Profile
                     </h4>
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-primary btn-sm" onclick="toggleEditMode()">
+                        <button type="button" class="btn btn-primary btn-sm" data-action="toggle-edit-mode">
                             <i class="fas fa-edit"></i> Edit Profile
                         </button>
                         <a href="{{ url_for('auth.user_management.change_password') }}" class="btn btn-secondary btn-sm">
@@ -154,7 +154,7 @@
                                     <button type="submit" class="btn btn-primary">
                                         <i class="fas fa-save"></i> Save Changes
                                     </button>
-                                    <button type="button" class="btn btn-secondary" onclick="toggleEditMode()">
+                                    <button type="button" class="btn btn-secondary" data-action="toggle-edit-mode">
                                         <i class="fas fa-times"></i> Cancel
                                     </button>
                                 </div>
