image posting works, development banner added

--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -50,6 +50,9 @@
 </head>
 
 <body>
+    <!-- Development Banner -->
+    {% include 'includes/development_banner.html' %}
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="{{ url_for('admin.dashboard') }}"
